using CommunityToolkit.Mvvm.ComponentModel;

namespace VinhKhanhAudioGuide.Mobile.Models;

public partial class Category : ObservableObject
{
    public string Id { get; set; } = string.Empty;
    public string Name { get; set; } = string.Empty;
    public string Icon { get; set; } = string.Empty;
    public string Description { get; set; } = string.Empty;
    public int LocationCount { get; set; }

    [ObservableProperty]
    private bool _isSelected;
}
