Table Category {
  Id String [pk]
  Name String
  Icon String
  Description String
}

Table Location {
  Id String [pk]
  Name String
  Description String
  ImageUrl String
  Address String
  Latitude Float
  Longitude Float
  Priority Int
  DetectionRadiusMeters Float
  Duration Int
  CategoryId String
}

Table AudioGuide {
  Id String [pk]
  Title String
  Description String
  AudioUrl String
  CloudinaryAudioUrl String
  CloudinaryPublicId String
  TranscriptText String
  Duration Int
  LocationId String
  Language String
  GeneratedFromTts Boolean
  TtsSourceText String
}

Table AudioScriptSegment {
  Id Int [pk]
  AudioGuideId String
  StartTimeSeconds Int
  EndTimeSeconds Int
  ScriptText String
}

Table Tour {
  Id String [pk]
  Name String
  Description String
  ImageUrl String
  Duration Int
  Price Decimal
  IsFeatured Boolean
}

Table TourLocation {
  TourId String
  LocationId String
  SortOrder Int

  indexes {
    (TourId, LocationId) [pk]
  }
}

Table AuthUserAccount {
  Id Int [pk, increment]
  Username String
  Password String
  DisplayName String
  Role String // SystemAdmin | PoiAdmin
  IsActive Boolean
  CreatedAtUtc DateTime

  indexes {
    (Username) [unique]
    (Role, IsActive)
  }
}

Table PoiAdminLocationAssignment {
  Id Int [pk, increment]
  Username String
  LocationId String

  indexes {
    (Username)
    (LocationId)
    (Username, LocationId) [unique]
  }
}

Table PoiChangeRequest {
  Id Guid [pk]
  SubmittedByUsername String
  SubmittedByName String
  LocationId String
  LocationName String
  Topic String
  Title String
  Details String
  TargetType String // Location | AudioGuide
  TargetEntityId String
  ChangeSetJson String
  Status String // Pending | InReview | Approved | Rejected
  SubmittedAtUtc DateTime
  UpdatedAtUtc DateTime
  UpdatedBy String
  ReviewNote String

  indexes {
    (Status)
    (SubmittedByUsername)
    (LocationId)
    (SubmittedAtUtc)
  }
}

Table ListeningHistory {
  Id String [pk]
  UserId Guid
  AudioGuideId String
  LocationId String
  AudioTitle String
  LocationName String
  LocationImageUrl String
  AudioDuration Int
  Progress Decimal
  ListenedSeconds Int
  IsCompleted Boolean
  LastListenedAtUtc DateTime

  indexes {
    (UserId)
    (AudioGuideId)
    (LocationId)
    (LastListenedAtUtc)
    (LocationId, LastListenedAtUtc)
    (UserId, LastListenedAtUtc)
  }
}

Table AppUser {
  Id Guid [pk]
  QrCodeValue String [unique] // token định danh lấy từ QR khi onboarding
  DeviceId String [unique]
  Status String // Active | Blocked
  CreatedAtUtc DateTime
  LastSeenAtUtc DateTime
  CurrentActivity String
  CurrentActivityAtUtc DateTime
  IsDeleted Boolean

  indexes {
    (QrCodeValue) [unique]
    (DeviceId) [unique]
    (Status)
    (CurrentActivityAtUtc)
  }
}

Table AppUserActivityLog {
  Id Guid [pk]
  UserId Guid
  DeviceId String
  SessionToken String
  ActivityName String
  ActivityContext String
  Route String
  IsForeground Boolean
  LoggedAtUtc DateTime

  indexes {
    (UserId)
    (DeviceId)
    (SessionToken)
    (LoggedAtUtc)
    (UserId, LoggedAtUtc)
  }
}

Table PaymentPackage {
  Id String [pk]
  Name String
  Description String
  Price Decimal
  Currency String
  DurationDays Int
  IsActive Boolean
  CreatedAtUtc DateTime

  indexes {
    (IsActive)
    (Price)
  }
}

Table UserSubscription {
  Id Guid [pk]
  UserId Guid
  AuthUserId Int
  PackageId String
  Status String // Pending | Active | Expired | Cancelled
  PurchasedAtUtc DateTime
  StartsAtUtc DateTime
  ExpiresAtUtc DateTime
  PaymentReference String
  PaidAmount Decimal // snapshot giá thực tế tại thời điểm mua
  LastVerifiedAtUtc DateTime

  indexes {
    (UserId)
    (PackageId)
    (Status)
    (ExpiresAtUtc)
    (UserId, Status)
  }
}

Table UserAppSession {
  Id Guid [pk]
  UserId Guid
  DeviceId String
  TokenValue String [unique] // token lưu sau quét QR/login để mở app lần sau
  RefreshToken String
  IssuedAtUtc DateTime
  ExpiresAtUtc DateTime
  LastValidatedAtUtc DateTime
  RevokedAtUtc DateTime
  IsActive Boolean

  indexes {
    (UserId)
    (DeviceId)
    (TokenValue) [unique]
    (IsActive)
    (ExpiresAtUtc)
    (UserId, DeviceId)
  }
}

Ref: Location.CategoryId > Category.Id
Ref: AudioGuide.LocationId > Location.Id
Ref: AudioScriptSegment.AudioGuideId > AudioGuide.Id
Ref: TourLocation.TourId > Tour.Id
Ref: TourLocation.LocationId > Location.Id
Ref: PoiAdminLocationAssignment.LocationId > Location.Id
Ref: PoiAdminLocationAssignment.Username > AuthUserAccount.Username
Ref: PoiChangeRequest.LocationId > Location.Id
Ref: ListeningHistory.UserId > AppUser.Id
Ref: ListeningHistory.AudioGuideId > AudioGuide.Id
Ref: ListeningHistory.LocationId > Location.Id
Ref: UserSubscription.UserId > AppUser.Id
Ref: UserSubscription.PackageId > PaymentPackage.Id
Ref: UserAppSession.UserId > AppUser.Id
Ref: AppUserActivityLog.UserId > AppUser.Id
Ref: PoiRegistrationRequest.PackageId > PaymentPackage.Id

Table PoiRegistrationRequest {
  Id Guid [pk]
  PackageId String // FK -> PaymentPackage
  Status String // AwaitingPayment | PendingSetup | Completed | Cancelled
  PaymentReference String
  PaidAtUtc DateTime
  CreatedUsername String // Username sau khi setup account hoàn tất
  CreatedAtUtc DateTime
  ExpiresAtUtc DateTime // TTL 30 phút

  indexes {
    (Status)
    (ExpiresAtUtc)
  }
}
